--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-table": "6.5.3",
+    "sharp": "^0.28.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
