--- a/.gitignore
+++ b/.gitignore
@@ -25,16 +25,18 @@ yarn-error.log*
 #amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
+amplify/logs
 amplify/mock-data
-amplify/team-provider-info.json
 amplify/backend/amplify-meta.json
 amplify/backend/awscloudformation
+amplify/backend/.temp
 build/
 dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
+amplify-build-config.json
 amplify-gradle-config.json
-amplifyxc.config# Specify filepatterns you want git to ignore.
-
+amplifytools.xcconfig
+.secret-*
