--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -29,5 +29,12 @@
         }
       }
     }
+  },
+  "function": {
+    "peopleCounterAdminGetSecrets": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
