--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -30,11 +30,5 @@
       }
     }
   },
-  "function": {
-    "peopleCounterAdminGetSecrets": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  }
+  "function": {}
 }
