--- a/amplify.yml
+++ b/amplify.yml
@@ -13,7 +13,7 @@ backend:
         - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
         - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
         - cd $BASE_PATH
-        - amplifyPush --simple
+        - amplifyPush -e default -s
 frontend:
   phases:
     preBuild:
