--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ backend:
   phases:
     build:
       commands:
-        - amplifyPush -e defaultEnv -s
+        - amplifyPush -e defaultEnv
 frontend:
   phases:
     preBuild:
