--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -724,7 +724,7 @@ Resources:
   CognitoUserPoolUser:
       Type: "AWS::Cognito::UserPoolUser"
       Properties:
-          Username: "administrator"
+          Username: !Ref CognitoUserEmail
           UserPoolId: '{{resolve:ssm:adminAmplUserPoolID:1}}'
           UserAttributes:
             -
