--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,7 @@ backend:
     build:
       commands:
         - export BASE_PATH=$(pwd)
+        - sudo yum update -y
         - yum install -y gcc openssl-devel bzip2-devel libffi-devel python3.8-pip
         - cd /opt && wget https://www.python.org/ftp/python/3.8.2/Python-3.8.2.tgz
         - cd /opt && tar xzf Python-3.8.2.tgz
