--- a/amplify.yml
+++ b/amplify.yml
@@ -7,10 +7,10 @@ backend:
         - sudo yum update -y
         - sudo yum install -y gcc openssl-devel bzip2-devel libffi-devel
         - cd /opt && wget https://www.python.org/ftp/python/3.8.2/Python-3.8.2.tgz
-        - cd /opt && tar xzf Python-3.8.2.tgz
+        - cd /opt && sudo tar xzf Python-3.8.2.tgz
         - cd /opt/Python-3.8.2 && ./configure --enable-optimizations
-        - cd /opt/Python-3.8.2 && make altinstall
-        - pip3.8 install --user pipenv
+        - cd /opt/Python-3.8.2 && sudo make altinstall
+        - sudo pip3.8 install --user pipenv
         - ln -fs /usr/local/bin/python3.8 /usr/bin/python3
         - ln -fs /usr/local/bin/pip3.8 /usr/bin/pip3
         - cd $BASE_PATH
