--- a/amplify.yml
+++ b/amplify.yml
@@ -4,15 +4,12 @@ backend:
     build:
       commands:
         - export BASE_PATH=$(pwd)
-        - sudo yum install -y gcc openssl-devel bzip2-devel libffi-devel python3.9-pip python3.7-pip
-        - cd /opt && wget https://www.python.org/ftp/python/3.9.6/Python-3.9.6.tgz && wget https://www.python.org/ftp/python/3.7.5/Python-3.7.5.tgz
-        - cd /opt && tar xzf Python-3.9.6.tgz && tar xzf Python-3.7.5.tgz 
+        - sudo yum install -y gcc openssl-devel bzip2-devel libffi-devel python3.9-pip
+        - cd /opt && wget https://www.python.org/ftp/python/3.9.6/Python-3.9.6.tgz
+        - cd /opt && tar xzf Python-3.9.6.tgz
         - cd /opt/Python-3.9.6 && ./configure --enable-optimizations
         - cd /opt/Python-3.9.6 && make altinstall
         - pip3.9 install --user pipenv
-        - cd /opt/Python-3.7.5 && ./configure --enable-optimizations
-        - cd /opt/Python-3.7.5 && make altinstall
-        - pip3.7 install --user pipenv
         - ln -fs /usr/local/bin/python3.9 /usr/bin/python3
         - ln -fs /usr/local/bin/pip3.9 /usr/bin/pip3
         - cd $BASE_PATH
