--- a/amplify.yml
+++ b/amplify.yml
@@ -5,9 +5,8 @@ backend:
       commands:
         - export BASE_PATH=$(pwd)
         - sudo yum install -y gcc openssl-devel bzip2-devel libffi-devel python3.9-pip
-        - sudo su
         - cd /opt && wget https://www.python.org/ftp/python/3.9.6/Python-3.9.6.tgz
-        - cd /opt && sudo su tar xzf Python-3.9.6.tgz
+        - cd /opt && tar xzf Python-3.9.6.tgz
         - cd /opt/Python-3.9.6 && ./configure --enable-optimizations
         - cd /opt/Python-3.9.6 && make altinstall
         - pip3.9 install --user pipenv
