--- a/amplify.yml
+++ b/amplify.yml
@@ -4,16 +4,18 @@ backend:
     build:
       commands:
         - export BASE_PATH=$(pwd)
-        - sudo yum install -y gcc openssl-devel bzip2-devel libffi-devel python3.9-pip
-        - cd /opt && wget https://www.python.org/ftp/python/3.9.6/Python-3.9.6.tgz
-        - cd /opt && tar xzf Python-3.9.6.tgz
-        - cd /opt/Python-3.9.6 && ./configure --enable-optimizations
-        - cd /opt/Python-3.9.6 && make altinstall
-        - pip3.9 install --user pipenv
-        - ln -fs /usr/local/bin/python3.9 /usr/bin/python3
-        - ln -fs /usr/local/bin/pip3.9 /usr/bin/pip3
+        - yum install -y gcc openssl-devel bzip2-devel libffi-devel python3.9-pip || true
+        - mkdir -p /tmp/python_build
+        - cd /tmp/python_build && wget https://www.python.org/ftp/python/3.9.6/Python-3.9.6.tgz
+        - cd /tmp/python_build && tar xzf Python-3.9.6.tgz
+        - cd /tmp/python_build/Python-3.9.6 && ./configure --enable-optimizations
+        - cd /tmp/python_build/Python-3.9.6 && make altinstall
+        - /tmp/python_build/Python-3.9.6/python3.9 -m pip install --user pipenv
+        - ln -fs /usr/local/bin/python3.9 /usr/bin/python3 || true
+        - ln -fs /usr/local/bin/pip3.9 /usr/bin/pip3 || true
         - cd $BASE_PATH
         - amplifyPush --simple
+
 frontend:
   phases:
     preBuild:
