--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -32,16 +32,7 @@
     "iotAPI": {
       "service": "API Gateway",
       "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "iotFunction",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
+      "dependsOn": []
     }
   },
   "function": {
